# sdk-go

./: .editorconfig  .gitignore  .travis.old.yml  .travis.yml  Collection.go  Kuzzle.go  LICENSE  README.md  Utils.go  buildspec-build-java_amd64.yml  buildspec-build-java_armv7.yml  buildspec-build-java_i686.yml  coverage.sh  cpp_build-log.txt  go.mod  go.sum  package-lock.json  package.json  test.sh
.ci/: setup_and_test.sh  test_with_coverage.sh
.codepipeline/: build-amd64.yml  build-armv7.yml  build-i386.yml  codepipeline.sh  docker-compose.yml  start_kuzzle.sh  test-golang.yml
.doc/: doc.sh  prepare-doc.sh
.github/: pull_request_template.md
auth/: auth.go  checkToken.go  checkToken_test.go  createMyCredentials.go  createMyCredentials_test.go  credentialsExist.go  credentialsExist_test.go  deleteMyCredentials.go  deleteMyCredentials_test.go  getCurrentUser.go  getCurrentUser_test.go  getMyCredentials.go  getMyCredentials_test.go  getMyRights.go  getMyRights_test.go  getStrategies.go  getStrategies_test.go  login.go  login_test.go  logout.go  logout_test.go  update_my_credentials.go  update_my_credentials_test.go  update_self.go  update_self_test.go  validate_my_credentials.go  validate_my_credentials_test.go
collection/: collection.go  collection_mapping.go  collection_mapping_test.go  count.go  count_test.go  create.go  create_document.go  create_document_test.go  create_test.go  delete.go  delete_document.go  delete_document_test.go  delete_specifications.go  delete_specifications_test.go  delete_test.go  document.go  document_exists.go  document_exists_test.go  document_test.go  exists.go  exists_test.go  fetch_document.go  fetch_document_test.go  get_mapping.go  get_mapping_test.go  get_specifications.go  get_specifications_test.go  list.go  list_test.go  m_routes.go  m_routes_test.go  publish_message.go  publish_message_test.go  refresh.go  refresh_test.go  replace_document.go  replace_document_test.go  room.go  room_count.go  room_count_test.go  (+31 more)
connection/: connection.go  web_socket.go  web_socket_test.go
core/: collection.go  kuzzle.go
document/: count.go  count_test.go  create.go  createOrReplace.go  createOrReplace_test.go  create_document_test.go  create_test.go  delete.go  deleteByQuery.go  deleteByQuery_test.go  delete_document.go  delete_test.go  document.go  document_exists_test.go  document_test.go  exists.go  exists_test.go  get.go  get_test.go  mCreate.go  mCreateOrReplace.go  mCreateOrReplace_test.go  mCreate_test.go  mDelete.go  mDelete_test.go  mGet.go  mGet_test.go  mReplace.go  mReplace_test.go  mUpdate.go  mUpdate_test.go  replace.go  replace_document.go  replace_test.go  search.go  search_test.go  update.go  update_document.go  update_document_test.go  update_test.go  (+2 more)
event/: Event.go
index/: create.go  create_test.go  delete.go  delete_test.go  exists.go  exists_test.go  getAutoRefresh.go  getAutoRefresh_test.go  index.go  list.go  list_test.go  mDelete.go  mDelete_test.go  refresh.go  refreshInternal.go  refreshInternal_test.go  refresh_test.go  setAutoRefresh.go  setAutoRefresh_test.go
internal/: build_query.go  mock_connection.go  mock_room.go  test_utils.go
internal/wrappers/features/step_defs_cpp/: CMakeLists.txt  collection-steps.cpp  cucumber.wire  document-steps.cpp  index-steps.cpp  kuzzle-sdk-steps.cpp  kuzzle_utils.cpp  kuzzle_utils.h  realtime-steps.cpp  steps.hpp
kuzzle/: CheckToken.go  add_listener.go  add_listener_test.go  check_token.go  check_token_test.go  collection.go  collection_test.go  create_index.go  create_index_test.go  create_my_credentials.go  create_my_credentials_test.go  delete_my_credentials.go  delete_my_credentials_test.go  disconnect.go  disconnect_test.go  event_emitter.go  flush_queue.go  flush_queue_test.go  get_all_statistics.go  get_all_statistics_test.go  get_auto_refresh.go  get_auto_refresh_test.go  get_headers.go  get_headers_test.go  get_my_credentials.go  get_my_credentials_test.go  get_my_rights.go  get_my_rights_test.go  get_server_info.go  get_server_info_test.go  get_statistics.go  get_statistics_test.go  kuzzle.go  kuzzle_test.go  list_collections.go  list_collections_test.go  list_indexes.go  list_indexes_test.go  listener.go  listener_test.go  (+34 more)
ms/: append.go  append_test.go  bitcount.go  bitcount_test.go  bitop.go  bitop_test.go  bitpos.go  bitpos_test.go  dbsize.go  dbsize_test.go  decr.go  decr_test.go  decrby.go  decrby_test.go  del.go  del_test.go  exists.go  exists_test.go  expire.go  expire_test.go  expireat.go  expireat_test.go  flushdb.go  flushdb_test.go  geoadd.go  geoadd_test.go  geodist.go  geodist_test.go  geohash.go  geohash_test.go  geopos.go  geopos_test.go  georadius.go  georadius_test.go  georadiusbymember.go  georadiusbymember_test.go  get.go  get_test.go  getbit.go  getbit_test.go  (+195 more)
protocol/: protocol.go
realtime/: count.go  count_test.go  join.go  join_test.go  list.go  list_test.go  publish.go  publish_test.go  realtime.go  subscribe.go  subscribe_test.go  unsubscribe.go  unsubscribe_test.go  validate.go  validate_test.go
security/: createCredentials.go  createCredentials_test.go  createFirstAdmin.go  createFirstAdmin_test.go  createOrReplaceProfile.go  createOrReplaceProfile_test.go  createOrReplaceRole.go  createOrReplaceRole_test.go  createProfile.go  createProfile_test.go  createRestrictedUser.go  createRestrictedUser_test.go  createRole.go  createRole_test.go  createUser.go  createUser_test.go  create_credentials.go  create_credentials_test.go  deleteCredentials.go  deleteCredentials_test.go  deleteProfile.go  deleteProfile_test.go  deleteRole.go  deleteRole_test.go  deleteUser.go  deleteUser_test.go  delete_credentials.go  delete_credentials_test.go  fetch_profile.go  fetch_profile_test.go  fetch_role.go  fetch_role_test.go  fetch_user.go  fetch_user_test.go  getAllCredentialFields.go  getAllCredentialFields_test.go  getCredentialFields.go  getCredentialFields_test.go  getCredentials.go  getCredentialsById.go  (+102 more)
server/: adminExists.go  info.go  (+13 more)
(+595 files in other folders)
